# Career-Agent

./: .env.example  .gitignore  AGENTS.md  README.md  README.zh-CN.md  README.zh.md  pyproject.toml  requirements-dev.txt
backend/app/: __init__.py  main.py
backend/tests/: conftest.py  test_agent_tools_trace.py  test_api.py  test_document_processing.py  test_error_handling.py  test_evaluator.py  test_experience_parser.py  test_fix_domain_models.py  test_fix_solution_regressions.py  test_interview_prep_agent.py  test_llm_service.py  test_match_scoring.py  test_model_catalog.py  test_numeric_claims.py  test_observability.py  test_pdf_parser.py  test_project_setup.py  test_public_output.py  test_quality_gate.py  test_react_model.py  test_resume_evidence_agent.py  test_retrieval.py  test_risk_auditor_agent.py  test_schemas.py  test_sprint2_qa.py  test_structured_react_tools.py  test_testing_fixtures.py  test_workflow_integration.py  test_workflow_nodes.py  test_workflow_orchestrator.py  test_writer.py
docs/: demo-walkthrough.md  detailed-design.md  docker-strategy.md  proposal.md  resume-bullets.md
docs/specs/: 2026-06-11-careerpilot-agent-design.md  2026-06-11-careerpilot-agent-design.zh.md
docs/sprint2/: fix_problem.md  fix_solution.md  improve.md  problem.md
docs/tasks/: backend-api.md  data-models.md  deployment-docs.md  document-processing.md  error-handling.md  evaluator.md  frontend.md  llm-service.md  match-scoring.md  progress.md  project-setup.md  retrieval.md  testing-fixtures.md  workflow.md  writer.md
frontend/: next-env.d.ts  package-lock.json  package.json
project_memory/: handoff.md  inbox.md  index.md
scripts/: start_app.bat  start_app.command  start_app.ps1  start_app.sh
(+121 files in other folders)
