[project]
name = "careerpilot-agent"
version = "0.1.0"
description = "Evidence-grounded career application agent MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "langchain>=1.0.0",
  "langchain-core>=1.4.0",
  "langchain-openai>=1.1.0",
  "langgraph>=1.2.5",
  "sentence-transformers>=3.0.0",
  "chromadb>=0.5.0",
  "pypdf>=5.0.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
addopts = "-q"
